// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchAllPlus works when direct match 2`] = `
Array [
  Object {
    "end": 8,
    "match": true,
    "start": 0,
    "subString": "foozball",
  },
]
`;

exports[`matchAllPlus works when match 2`] = `
Array [
  Object {
    "end": 10,
    "match": false,
    "start": 0,
    "subString": "baseball  ",
  },
  Object {
    "end": 18,
    "match": true,
    "start": 10,
    "subString": "foozball",
  },
]
`;

exports[`matchAllPlus works when no match 2`] = `
Array [
  Object {
    "end": 18,
    "match": false,
    "start": 0,
    "subString": "baseball  boozball",
  },
]
`;
